
  [ Evan Dandrea ]
  * Update translations from Launchpad.
  * If a session indicator gconf key starts unset, make sure it ends
    that way (LP: #684052).
  * Fix mistake in the cleanup branch merge that broke translations
    (LP: #691671).
  * pc105.tree is included in console-setup now, which speeds up
    ubiquity builds.

 -- Mario Limonciello <Mario_Limonciello@Dell.com>  Thu, 20 Jan 2011 05:53:11 -0600

ubiquity (2.5.11) natty; urgency=low

  * Automatic update of included source packages: partman-partitioning
    78ubuntu2.

 -- Mario Limonciello <Mario_Limonciello@Dell.com>  Tue, 18 Jan 2011 15:11:14 -0600

ubiquity (2.5.10) natty; urgency=low

  * No change rebuild for new libindicator2.

 -- Evan Dandrea <ev@ubuntu.com>  Mon, 17 Jan 2011 12:30:07 +0000

ubiquity (2.5.9) natty; urgency=low

  [ Mario Limonciello ]
  * If upgradable packages are marked for installation by a plugin, upgrade
    them rather than ignoring.
  * Don't start plugininstall if the user presses back on the last page in
    oem-config.
  * Don't show "No Localization" as a language option. (LP: #697326)
  * Automatic update of included source packages: base-installer
    1.114ubuntu3, flash-kernel 2.28ubuntu12, hw-detect 1.81ubuntu2,
    partman-btrfs 5ubuntu1, user-setup 1.28ubuntu13.

  [ Colin Watson ]
  * Depend on new archdetect-deb package rather than installing it from
    hw-detect ourselves.

  [ Evan Dandrea ]
  * Avoid running oem-config in the live environment in custom
    configurations (LP: #699720).  Thanks Shih-Yuan Lee!
  * Queue a redraw of the panel after setting the background (LP:
    #693300).  Thanks Cyrus Lien!

 -- Mario Limonciello <Mario_Limonciello@Dell.com>  Fri, 14 Jan 2011 16:32:30 -0600

ubiquity (2.5.8) natty; urgency=low

  * Allow overriding frontend using the ubiquity/frontend= boot parameter
    (thanks, Roberto C. Morano and Juanje Ojeda; LP: #364009).
  * console-setup/codeset was renamed to console-setup/codeset47
    (LP: #699829).